# FakeFaces

./: .gitignore  config.py  download.py  main.py  pyproject.toml
src/: core.py  model.py
