[project]
name = "fakeface"
version = "0.1.0"
description = "Add your description here"
requires-python = "~=3.12.0"
dependencies = [
    "kagglehub>=1.0.0",
    "torch",
    "torchvision",
    "pytorch-triton-rocm",
    "imageio>=2.37.3",
    "wandb>=0.26.1",
    "tqdm>=4.67.3",
]


[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true
