[project]
name = "fakeface"
version = "0.1.0"
description = "Add your description here"
requires-python = "~=3.12.0"
dependencies = [
    "kagglehub>=1.0.0",
    "imageio>=2.37.3",
    "wandb>=0.26.1",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
rocm = [
    "torch",
    "torchvision",
    "pytorch-triton-rocm",
]
cuda = [
    "torch",
    "torchvision",
    "triton",
]
[tool.uv]
conflicts = [
    [{ extra = "cuda" }, { extra = "rocm" }],
]
prerelease = "allow"

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm", extra = "rocm"},
    { index = "pytorch-cuda", extra = "cuda"},
]
torchvision = [
    { index = "pytorch-rocm", extra = "rocm"},
    { index = "pytorch-cuda", extra = "cuda"},
]
pytorch-triton-rocm = { index = "pytorch-rocm", extra = "rocm" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true